--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,18 @@ server.port=${PORT:8080}
 # Ensure application is run in Vaadin 14/npm mode
 vaadin.compatibilityMode = false
 logging.level.org.atmosphere = warn
-
+keycloak.realm=Demo
+keycloak.auth-server-url=http://localhost:9991/auth/
+keycloak.ssl-required=external
+keycloak.resource=my-app
+keycloak.public-client=true
+keycloak.confidential-port=0
 # To improve the performance during development. 
 # For more information https://vaadin.com/docs/v14/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 # vaadin.whitelisted-packages= org/vaadin/example
+
+
+# Ensure application is run in Vaadin 14/npm mode
+
+
+
